# GomokuBench

./: .gitignore  README.md  gomoku.py  pyproject.toml  rule.md  sample_report.md
benchmarks/: dual-0ba7299f568749c1aacab1ab82859442.json  dual-2f73644a91304b6fafe69e65aa2207a4.json  dual-661201b17dde4f4ba0a0b83a9bd9c578.json  dual-7b6884b2e70848be91862d383dc9ea5c.json  dual-8a1e78267576424bb1473135452ba44b.json  dual-deefb450e8624027b4b25198aff189cc.json  gemini-3-flash-preview.json  mistral-medium-3.5-128b-nvidia-api-fast.json  mistral-small-2603.json  nemotron-3-super.json  openai_gpt-oss-120b:free.json
gomokubench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
libs/: __init__.py  ai.py  benchmark.py  board.py  cli.py  dual.py  eval_fn.py  game.py  llm_player.py  model_config.py  piece.py  progress.py  report.py
models/: claude-opus-4.7.json  deepseek-v4-pro-nim-local.json  deepseek-v4-pro-together.json  deepseek-v4-pro.json  gemini-3-flash-preview.json  gemma4:latest.json  gemma4latest.json  gpt-5-mini.json  gpt-5.5-pro.json  gpt-5.5.json  gpt-oss-120b.json  grok-4.1-fast.json  hy3-preview.json  kimi-k2.6-nim-local.json  kimi-k2.6-novita.json  kimi-k2.6.json  ling-2.6-1t.json  menotron3-omini-local.json  minimax-m2.5.json  minimax-m2.7-nim-local.json  mistral-medium-3.5-128b-nvidia-api-fast.json  mistral-medium-3.5-128b-nvidia-api.json  mistral-small-2603.json  nemotron-3-super.json  qwen3.6-flash.json
