[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gomokubench"
version = "0.1.10"
description = "A reproducible Gomoku benchmark for search-vs-LLM and LLM-vs-LLM dual play."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Homer Quan" }
]
dependencies = [
  "numpy"
]
keywords = ["gomoku", "benchmark", "llm", "dual", "alpha-beta", "minimax", "cli", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://github.com/homerquan/GomokuBench"
Repository = "https://github.com/homerquan/GomokuBench"

[project.scripts]
gomoku = "libs.cli:run_cli"

[tool.setuptools]
packages = ["libs"]
py-modules = ["gomoku"]
include-package-data = false

[tool.setuptools.data-files]
"models" = [
  "models/claude-opus-4.7.json",
  "models/deepseek-v4-pro.json",
  "models/gemini-3-flash-preview.json",
  "models/gemma4-local.json",
  "models/gemma4latest.json",
  "models/gpt-5.5.json",
  "models/gpt-5.5-pro.json",
  "models/gpt-oss-120b.json",
  "models/grok-4.1-fast.json",
  "models/hy3-preview.json",
  "models/kimi-k2.6.json",
  "models/ling-2.6-1t.json",
  "models/minimax-m2.5.json",
  "models/mistral-medium-3.5-128b-nvidia-api.json",
  "models/mistral-small-2603.json",
  "models/nemotron-3-super.json",
  "models/qwen3.6-flash.json",
]
"" = ["rule.md"]
